Added content in div

--- a/assignment-1/ass1.htm
+++ b/assignment-1/ass1.htm
@@ -6,7 +6,7 @@
   <style>
     body{
       background-color: #70C1F8;
-      font-family: "Comic Sans M";
+      font-family: "Comic Sans MS";
     }
     p {
       margin: 0px;
@@ -52,7 +52,7 @@
      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
      deserunt mollit anim id est laborum.</p>
     <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-    deserunt mollit anim id est laborum.saasdasasdasdsd</p>
+    deserunt mollit anim id est laborum.</p>
   </div>
   <div class="google-link link">
     <a href="google.com" target="_blank">Search Google</a>
