Added title to the assignments

--- a/assignment-2/form.htm
+++ b/assignment-2/form.htm
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Example of HTML File Select box</title>
+  <title>Registration form</title>
   <style>
     div.form-section {
       background-color: #FFFC33;
