--- a/assignment-1/ass1.htm
+++ b/assignment-1/ass1.htm
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Assignment 1</title>
   <style>
     body{
       background-color: #70C1F8;
