Indent the file

--- a/assignment-1/ass1.htm
+++ b/assignment-1/ass1.htm
@@ -13,9 +13,15 @@
       margin: 0px;
       text-indent: 50px;
     }
-    .top-div { text-align: center;}
-    .h01 { color: red;}
-    .h02 { color: #F0FF04;}
+    .top-div {
+      text-align: center;
+    }
+    .h01 {
+      color: red;
+    }
+    .h02 {
+      color: #F0FF04;
+    }
     .blue {
       color: #0C28EE;
     }
