Modified CSS in  form.htm file

--- a/assignment-2/form.htm
+++ b/assignment-2/form.htm
@@ -15,7 +15,7 @@
       height: 72%;
       margin-bottom: 18px;
       margin-left: 18px;
-      padding: 1% 0 2% 0;
+      padding: 1% 10% 2% 0;
       width: 87%;
     }
     a.help-tip {
